--- a/README
+++ b/README
@@ -1,3 +1,3 @@
-jQuery, Rapha‘l Last.fm / SVG Chart Mashup
+jQuery, Raphael Last.fm / SVG Chart Mashup
 
 Enter your Last.fm username to see your top eight most popular played tracks in a funky pie chart! 
